--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=9e0683b09b2c2ed9f3bf
+github.client.secret=461dfb95bc61f14d157956e3d82bb9b346eb5448
+github.redirect.uri=http://localhost:8887/callback
