Spring Boot Mybatis H2 save user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8887
 github.client.id=9e0683b09b2c2ed9f3bf
 github.client.secret=461dfb95bc61f14d157956e3d82bb9b346eb5448
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
